modify url-parse to uri-parse for socks5Proxy && support password auth